a few small wording clarifications

--- a/common/configuration-db.adoc
+++ b/common/configuration-db.adoc
@@ -29,8 +29,8 @@ If there is an unpartitioned disk attached to the virtual machine, the dialog wi
 * Enter *1* to choose `/dev/vdb` for the database location. This option creates a logical volume using this device and mounts the volume to the appliance in a location appropriate for storing the database. The default location is `/var/opt/rh/rh-postgresql95/lib/pgsql`, which can be found in the environment variable `$APPLIANCE_PG_MOUNT_POINT`.
 * Enter *2* to continue without partitioning the disk. A second prompt will confirm this choice. Selecting this option results in using the root filesystem for the data directory (not advised in most cases). 
 . Enter *Y* or *N* for *Configure this server as a dedicated database instance?*
-* Select *Y* to configure the appliance _only_ as a database. The resulting appliance will not have a user interface. This option is the default, and also can be chosen by pressing *Enter*.
-* Select *N* to configure the appliance with a user interface.
+* Select *Y* to configure the appliance _only_ as a database. As a result, the appliance is configured as a basic PostgreSQL server, without a user interface. 
+* Select *N* to configure the appliance with the full administrative user interface.
 . When prompted, enter a unique number to create a new region.
 +
 [IMPORTANT]
