--- a/doc-Managing_Providers/topics/Amazon_EC2_Providers_Permissions.adoc
+++ b/doc-Managing_Providers/topics/Amazon_EC2_Providers_Permissions.adoc
@@ -2,15 +2,15 @@
 
 = Permissions for Amazon EC2 Providers
 
-Red Hat recommends using Amazon EC2's _Power User_ IAM policy when adding Amazon EC2 as a cloud provider in {product-title}.
-This policy allows those in the _Power User_ group full access to AWS services except for user administration, meaning a {product-title} API user can access all of the API functionality, but cannot access or change user
+Red Hat recommends using Amazon EC2's _Power User_ Identity and Access Management (IAM) policy when adding Amazon EC2 as a cloud provider in {product-title_short}.
+This policy allows those in the _Power User_ group full access to AWS services except for user administration, meaning a {product-title_short} API user can access all of the API functionality, but cannot access or change user
 permissions.
 
 Further limiting API access limitations can limit Automate capabilities, as Automate
 scripts directly access the AWS SDK to create brand new
 application functionality.
 
-The AWS services primarily accessed by {product-title} API include:
+The AWS services primarily accessed by the {product-title_short} API include:
 
 * Elastic Compute Cloud (EC2)
 * CloudFormation
