Removed one instance of a bare AsciiDoc tag.

--- a/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Provisioning_Requests.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Provisioning_Requests.adoc
@@ -20,7 +20,7 @@ image:2315.png[]
 
 If you are using a Windows template, the following configuration is required:
 
-* To customize settings that are inside the operating system, Sysprep must be copied to the appropriate directory on your vCenter computer. Usually this location is: `class="directory">C:\Documents and Settings\All Users\Application Data\VMware\VMware VirtualCenter\sysprep`. Copy the Sysprep tools to the relevant operating system subdirectory. If you are running a standard Win2008 operating system, this step is unnecessary as Sysprep is included as standard.
+* To customize settings that are inside the operating system, Sysprep must be copied to the appropriate directory on your vCenter computer. Usually this location is: `C:\Documents and Settings\All Users\Application Data\VMware\VMware VirtualCenter\sysprep`. Copy the Sysprep tools to the relevant operating system subdirectory. If you are running a standard Win2008 operating system, this step is unnecessary as Sysprep is included as standard.
 * The Windows template must have the latest version of VMware tools for its ESX Server. Check the VMware Site for more information. If you are creating a new password for the Administrator account, the Administrators password must be blank on the template. This is a limitation of Microsoft Sysprep.
 
 See the VMware documentation for a complete list of customization requirements.
