--- a/doc-Installing_on_Google_Compute_Engine/miq/index.adoc
+++ b/doc-Installing_on_Google_Compute_Engine/miq/index.adoc
@@ -17,7 +17,7 @@ include::common/attributes/miq.adoc[]
 include::topics/installation.adoc[]
 
 [[Configuration]]
-include::common/configuration.adoc[]
+include::topics/configuration.adoc[]
 
 [[Initial_Login]]
 == Logging In After Installing {product-title}
