--- a/doc-Installing_on_Microsoft_Azure/miq/index.adoc
+++ b/doc-Installing_on_Microsoft_Azure/miq/index.adoc
@@ -18,7 +18,7 @@ include::common/attributes/miq.adoc[]
 include::topics/installation.adoc[]
 
 [[Configuration]]
-include::common/configuration.adoc[]
+include::topics/configuration.adoc[]
 
 [[initial-login]]
 == Logging In After Installing {product-title}
