updated only the Configuring an Internal Database instructions in Azure and GCE guides

--- a/doc-Installing_on_Microsoft_Azure/topics/configuration.adoc
+++ b/doc-Installing_on_Microsoft_Azure/topics/configuration.adoc
@@ -62,38 +62,47 @@ A valid fully qualified hostname for the {product-title} appliance is required f
 
 [IMPORTANT]
 ====
-Before installing an internal database, add a disk to the infrastructure hosting your appliance. See the storage documentation specific to your infrastructure for instructions on how to add a disk. As a storage disk usually cannot be added while a virtual machine is running, Red Hat recommends adding the disk before starting the appliance. {product-title} only supports installing of an internal VMDB on blank disks. The installation will fail if the disks are not blank.
+Before installing an internal database, add a disk to the infrastructure hosting your appliance. See the documentation specific to your infrastructure for instructions for adding a disk. As a storage disk usually cannot be added while a virtual machine is running, Red Hat recommends adding the disk before starting the appliance. {product-title} only supports installing of an internal VMDB on blank disks; installation will fail if the disks are not blank.
 ====
 
-. Start the appliance and open a terminal console.
-. Log in to the appliance using the SSH key.
-. Enter the `sudo appliance_console` command. The {product-title} appliance summary screen displays.
+. Start the appliance and open a terminal from your virtualization or cloud provider.
+. After starting the appliance, log in with a user name of `root` and the default password of `smartvm`. This displays the Bash prompt for the `root` user.
+. Enter the `appliance_console` command. The {product-title} appliance summary screen displays.
 . Press *Enter* to manually configure settings.
 . Select *8) Configure Database* from the menu.
 . You are prompted to create or fetch an encryption key.
 * If this is the first {product-title} appliance, choose *1) Create key*.
 * If this is not the first {product-title} appliance, choose *2) Fetch key* from remote machine to fetch the key from the first {product-title} appliance. All {product-title} appliances in a multi-region deployment must use the same key.
 . Choose *1) Internal* for the database location.
-. Choose a disk for the database. For example:
+. Choose a disk for the database. This can be either a disk you attached previously, or a partition on the current disk. 
++
+[IMPORTANT]
+====
+Red Hat recommends using a separate disk for the database.
+====
++
+If there is an unpartitioned disk attached to the virtual machine, the dialog will show options similar to the following:
 +
 ----
-1)  /dev/vdb: 20480
-
-Choose disk:
+1) /dev/vdb: 20480
+2) Don't partition the disk 
 ----
 +
-Enter *1* to choose `/dev/vdb` for the database location.
-
-. When prompted, enter a unique three digit region ID to create a new region. As your deployment grows, you can add more regions in the future to manage multiple appliances.  
+* Enter *1* to choose `/dev/vdb` for the database location. This option creates a logical volume using this device and mounts the volume to the appliance in a location appropriate for storing the database. The default location is `/var/opt/rh/rh-postgresql95/lib/pgsql`, which can be found in the environment variable `$APPLIANCE_PG_MOUNT_POINT`.
+* Enter *2* to continue without partitioning the disk. A second prompt will confirm this choice. Selecting this option results in using the root filesystem for the data directory (not advised in most cases). 
+. Enter *Y* or *N* for *Configure this server as a dedicated database instance?*
+* Select *Y* to configure the appliance _only_ as a database. As a result, the appliance is configured as a basic PostgreSQL server, without a user interface. 
+* Select *N* to configure the appliance with the full administrative user interface.
+. When prompted, enter a unique number to create a new region.
 +
 [IMPORTANT]
 ====
 Creating a new region destroys any existing data on the chosen database.
 ====
 +
-. Confirm the configuration when prompted.
+.  Create and confirm a password for the database.
 
-{product-title} configures the internal database.
+{product-title} then configures the internal database.
 
 [[configuring-an-external-database]]
 ==== Configuring an External Database
