added questionmark image for info menu, updated setting menu references in Gen Config guide

--- a/doc-General_Configuration/topics/About.adoc
+++ b/doc-General_Configuration/topics/About.adoc
@@ -1,13 +1,11 @@
 [[about]]
 == About
 
-In the *About* area of *Settings*, you can see session information for the console, download the {product-title} documentation in PDF format, and navigate to the Red Hat Customer Portal.
+Click the question mark icon (image:questionmark.png[]) at the top right corner of the {product-title} user interface to open a dropdown menu with links and information about the current session.
 
-To view session information, documentation, and the Red Hat Customer Portal link:
+In the image:questionmark.png[] menu, you can see session information for the console, download the {product-title} documentation in PDF format, and navigate to the Red Hat Customer Portal.
 
-. Navigate to menu:Settings[About].
-. To go to the Red Hat Customer Portal, click link:http://access.redhat.com/home[access.redhat.com].
-. To view the documentation, click the title of the document to view.
-
-
+* Click *Documentation* to open a list of guides. Click the title of the document to view it as a PDF in a new browser tab.
+* Click *Red Hat Customer Portal* to open the Red Hat Customer Portal in a new browser tab. 
+* Click *About* to open a pop-up window showing information about the {product-title_short} version and the session of the logged-in user.
 
