--- a/doc-General_Configuration/topics/Settings_Overview.adoc
+++ b/doc-General_Configuration/topics/Settings_Overview.adoc
@@ -1,10 +1,12 @@
 [[settings-overview]]
 == Settings Overview
 
-To view or modify global settings for your appliance, hover over the *Settings* menu and click the sub-tab *My Settings* to modify.
-The availability of each sub-tab depends on the role assigned to your user account. For more information on roles, see xref:roles[].
+The settings menu is located at the top right of the {product-title} user interface.
 
-The following is a list of the sub-tabs available from the *Settings* menu:
+To view or modify global settings for your appliance, click your username to open the settings dropdown menu, and click *My Settings* to modify.
+The availability of each menu item depends on the role assigned to your user account. For more information on roles, see xref:roles[].
+
+The following is a list of the menu items available from the settings menu:
 
 * *My Settings* 
 +
@@ -16,12 +18,6 @@ This menu allows you to view virtual machine SmartState Analysis tasks that can 
 +
 * *Configuration*
 +
-This menu allows you to specify enterprise, region, zone, and server settings for your {product-title} infrastructure. Diagnostics such as logs and the status of processes are also shown here.
-+
-* *About* 
-+
-This menu provides information about the session of the logged-in user, and links to product documentation and the Red Hat Customer Portal.
-+
-
+This menu allows you to specify enterprise, region, zone, and server settings for your {product-title} infrastructure. Diagnostics such as logs and the status of processes are also shown here. The *Configuration* menu is available only to super administrators and administrators.
 
 
