--- a/doc-Installing_on_Microsoft_Azure/topics/configuration.adoc
+++ b/doc-Installing_on_Microsoft_Azure/topics/configuration.adoc
@@ -6,6 +6,7 @@ Although the {product-title} appliance comes preconfigured to be integrated imme
 [[changing-configuration-settings]]
 === Changing Configuration Settings
 
+. Start the appliance and open a terminal console.
 . Log in to the appliance using the SSH key.
 . Enter the `sudo appliance_console` command. The {product-title} appliance summary screen displays.
 . Press `Enter` to manually configure settings.
@@ -65,10 +66,10 @@ A valid fully qualified hostname for the {product-title} appliance is required f
 Before installing an internal database, add a disk to the infrastructure hosting your appliance. See the documentation specific to your infrastructure for instructions for adding a disk. As a storage disk usually cannot be added while a virtual machine is running, Red Hat recommends adding the disk before starting the appliance. {product-title} only supports installing of an internal VMDB on blank disks; installation will fail if the disks are not blank.
 ====
 
-. Start the appliance and open a terminal from your virtualization or cloud provider.
-. After starting the appliance, log in with a user name of `root` and the default password of `smartvm`. This displays the Bash prompt for the `root` user.
-. Enter the `appliance_console` command. The {product-title} appliance summary screen displays.
-. Press *Enter* to manually configure settings.
+. Start the appliance and open a terminal console.
+. Log in to the appliance using the SSH key.
+. Enter the `sudo appliance_console` command. The CloudForms Management Engine appliance summary screen displays.
+. Press `Enter` to manually configure settings.
 . Select *8) Configure Database* from the menu.
 . You are prompted to create or fetch an encryption key.
 * If this is the first {product-title} appliance, choose *1) Create key*.
