--- a/doc-Installing_on_Microsoft_Azure/topics/configuration.adoc
+++ b/doc-Installing_on_Microsoft_Azure/topics/configuration.adoc
@@ -68,7 +68,7 @@ Before installing an internal database, add a disk to the infrastructure hosting
 
 . Start the appliance and open a terminal console.
 . Log in to the appliance using the SSH key.
-. Enter the `sudo appliance_console` command. The CloudForms Management Engine appliance summary screen displays.
+. Enter the `sudo appliance_console` command. The {product-title} appliance summary screen displays.
 . Press `Enter` to manually configure settings.
 . Select *8) Configure Database* from the menu.
 . You are prompted to create or fetch an encryption key.
