corrected all references to Settings menu to settings menu, plus other necessary rewording.

--- a/doc-General_Configuration/topics/My_Settings.adoc
+++ b/doc-General_Configuration/topics/My_Settings.adoc
@@ -16,7 +16,7 @@ Use the quadrant view to see a component's properties at a glance.
 
 Use the following procedure to change grid and tile icons:
 
-. Navigate to menu:Settings[My Settings], then click on the *Visual* tab.
+. From the settings menu, navigate to *My Settings*, then click on the *Visual* tab.
 . In *Grid/Tile Icons*, set items to `ON` to display all four quadrants for the item, or `OFF` to display only one icon.
 . Click *Save*.
 
@@ -40,7 +40,7 @@ Set any of the above options to `OFF` to see only one icon instead of four quadr
 
 Use the following procedure to set the default number of items to display on each resource page.
 
-. Navigate to menu:Settings[My Settings], then click on the *Visual* tab.
+. From the settings menu, navigate to *My Settings*, then click on the *Visual* tab.
 . In the *Default Items Per Page* area, select the default number of items to display for each view from the corresponding drop down list.
 image:2017.png[]
 . Click *Save*.
@@ -50,7 +50,7 @@ image:2017.png[]
 
 Use the following procedure to set the default start page after logging in. For example, instead of going to the *{product-title}* dashboard, you can set the default start page to see a list of your virtual machines.
 
-. Navigate to menu:Settings[My Settings], then click on the *Visual* tab.
+. From the settings menu, navigate to *My Settings*, then click on the *Visual* tab.
 . In the *Start Page* area, select the page to display at login.
 image:2018.png[]
 . Click *Save*.
@@ -60,7 +60,7 @@ image:2018.png[]
 
 Use the following procedure to set your own themes, colors, and time zone for the console. These settings are specific to the logged-on user.
 
-. Navigate to menu:Settings[My Settings], then click on the *Visual* tab.
+. From the settings menu, navigate to *My Settings*, then click on the *Visual* tab.
 . Make selections from *Display Settings* for the following items:
 image:2141.png[]
 .. Use *Chart Theme* to select a group of colors and font sizes specifically for charts.
@@ -84,7 +84,7 @@ The options under the *Default View* menu allow you to configure the default lay
 
 Use the following procedure to set general view options:
 
-. Navigate to menu:Settings[My Settings], then click on the *Default Views* tab.
+. From the settings menu, navigate to *My Settings*, then click on the *Default Views* tab.
 . In the *General* area, click the appropriate button for the way you want to view each type of screen listed. The selected view shows as a blue icon.
 +
 image:7114.png[]
@@ -103,7 +103,7 @@ image:7114.png[]
 
 Use the following procedure to set default views for services in the menu:Compute[Services] tab.
 
-. Navigate to menu:Settings[My Settings], then click on the *Default Views* tab.
+. From the settings menu, navigate to *My Settings*, then click on the *Default Views* tab.
 . In the *Services* area, click the appropriate button for the way you want to view each item.
 image:7115.png[]
 * Click image:2020.png[] (*Grid View*) to view virtual thumbnails or icons.
@@ -117,7 +117,7 @@ image:7115.png[]
 
 Use the following procedure to set default views for clouds in the menu:Compute[Clouds] tab.
 
-. Navigate to menu:Settings[My Settings], then click on the *Default Views* tab.
+. From the settings menu, navigate to *My Settings*, then click on the *Default Views* tab.
 . In the *Clouds* area, click the appropriate button for the way you want to view each item.
 image:Clouds.png[]
 * Click image:2020.png[] (*Grid View*) to view virtual thumbnails or icons.
@@ -131,7 +131,7 @@ image:Clouds.png[]
 
 Use the following procedure to set default views for infrastructure components in the menu:Compute[Infrastructure] tab.
 
-. Navigate to menu:Settings[My Settings], then click on the *Default Views* tab.
+. From the settings menu, navigate to *My Settings*, then click on the *Default Views* tab.
 . In the *Infrastructure* area, click the appropriate button for the way you want to view each item.
 image:2032.png[]
 * Click image:2020.png[] (*Grid View*) to view virtual thumbnails or icons.
@@ -145,7 +145,7 @@ image:2032.png[]
 
 Use the following procedure to set default views for containers in the menu:Compute[Containers] tab.
 
-. Navigate to menu:Settings[My Settings], then click on the *Default Views* tab.
+. From the settings menu, navigate to *My Settings*, then click on the *Default Views* tab.
 . In the *Containers* area, click the appropriate button for the way you want to view each item.
 image:Containers.png[]
 * Click image:2020.png[] (*Grid View*) to view virtual thumbnails or icons.
@@ -164,7 +164,7 @@ The options the *Default Filters* menu allow you to configure the default filter
 
 To set default filters for cloud components:
 
-. Navigate to menu:Settings[My Settings], then click on the *Default Filters* tab.
+. From the settings menu, navigate to *My Settings*, then click on the *Default Filters* tab.
 . From the *Cloud* folder, check the boxes for the default filters that you want available. Items that have changed show in blue text.
 . Click *Save*.
 
@@ -173,7 +173,7 @@ To set default filters for cloud components:
 
 To set default filters for containers:
 
-. Navigate to menu:Settings[My Settings], then click on the *Default Filters* tab.
+. From the settings menu, navigate to *My Settings*, then click on the *Default Filters* tab.
 . From the *Containers* folder, check the boxes for the default filters that you want available. Items that have changed show in blue text.
 . Click *Save*.
 
@@ -182,7 +182,7 @@ To set default filters for containers:
 
 To set default filters for infrastructure components:
 
-. Navigate to menu:Settings[My Settings], then click on the *Default Filters* tab.
+. From the settings menu, navigate to *My Settings*, then click on the *Default Filters* tab.
 . In the *Infrastructure* folder, select the default filters that you want available. Items that have changed show in blue text.
 . Click *Save*.
 
@@ -191,7 +191,7 @@ To set default filters for infrastructure components:
 
 To Set Default Filters for Services:
 
-. Navigate to menu:Settings[My Settings], then click on the *Default Filters* tab.
+. From the settings menu, navigate to *My Settings*, then click on the *Default Filters* tab.
 . In the *Services* folder, select the default filters that you want available. Items that have changed show in blue text.
 . Click *Save*.
 
@@ -205,7 +205,7 @@ The options under the *Time profiles* menu allow you to specify the hours for wh
 
 To create a time profile:
 
-. Navigate to menu:Settings[My Settings], then click on the *Time Profiles* tab.
+. From the settings menu, navigate to *My Settings*, then click on the *Time Profiles* tab.
 . Click image:1847.png[](*Configuration*), and image:plus_green.png[](*Add a new Time Profile*).
 image:2039.png[]
 . Type a meaningful name in the *Description* field.
@@ -237,7 +237,7 @@ For non-performance reports, the user's time zone is used when displaying dates 
 
 To edit a time profile:
 
-. Navigate to menu:Settings[My Settings], then click on the *Time Profiles* tab.
+. From the settings menu, navigate to *My Settings*, then click on the *Time Profiles* tab.
 . Check the time profile you want to edit.
 . Click image:1847.png[] (*Configuration*), and image:1851.png[] (*Edit selected Time Profile*).
 . Make the required changes.
@@ -249,7 +249,7 @@ To edit a time profile:
 
 To copy a time profile:
 
-. Navigate to menu:Settings[My Settings], then click on the *Time Profiles* tab.
+. From the settings menu, navigate to *My Settings*, then click on the *Time Profiles* tab.
 . Check the time profile you want to copy.
 . Click image:1847.png[] (*Configuration*), and image:1859.png[] (*Copy selected Time Profile*).
 . Make the required changes.
@@ -261,7 +261,7 @@ To copy a time profile:
 
 To delete a time profile:
 
-. Navigate to menu:Settings[My Settings], then click on the *Time Profiles* tab.
+. From the settings menu, navigate to *My Settings*, then click on the *Time Profiles* tab.
 . Check the time profile you want to delete.
 . Click image:1847.png[] (*Configuration*), and image:gui_delete.png[] (*Delete selected Time Profiles*).
 . Click *Save*.
