--- a/doc-General_Configuration/topics/Smart_Proxies.adoc
+++ b/doc-General_Configuration/topics/Smart_Proxies.adoc
@@ -48,6 +48,6 @@ If an existing connection uses a different set of credentials than those set in 
 . If you added the host manually instead of *Host Discovery* or *Provider Refresh* finding it, select the host's operating system from the *Host Platform* drop-down box to ensure the host platform is available.
 . Click *Save*.
 
-When remotely installing on Windows hosts, the SmartProxy file is first copied to a Windows proxy. That computer then installs the file to the target host. The Windows proxy is the same as when you select the Default Repository SmartProxy box located by navigating to menu:Settings[Configuration], then clicking on the desired server, then the *Server* tab, and exploring the *Server Control* area.
+When remotely installing on Windows hosts, the SmartProxy file is first copied to a Windows proxy. That computer then installs the file to the target host. The Windows proxy is the same as when you select the Default Repository SmartProxy box. You can locate this by navigating to the settings menu and selecting *Configuration*, then clicking on the desired server, then the *Server* tab, and exploring the *Server Control* area.
 
 
