--- a/doc-General_Configuration/topics/About.adoc
+++ b/doc-General_Configuration/topics/About.adoc
@@ -1,11 +1,9 @@
 [[about]]
 == About
 
-Click the question mark icon (image:questionmark.png[]) at the top right corner of the {product-title} user interface to open a dropdown menu with links and information about the current session.
+Click the question mark icon (image:questionmark.png[]) at the top right of the {product-title} user interface to open a dropdown menu with links to {product-title} documentation and the Red Hat Customer Portal, and for information about the current {product-title_short} session.
 
-In the image:questionmark.png[] menu, you can see session information for the console, download the {product-title} documentation in PDF format, and navigate to the Red Hat Customer Portal.
-
-* Click *Documentation* to open a list of guides. Click the title of the document to view it as a PDF in a new browser tab.
+* Click *Documentation* to open a list of guides. Click the title of a document to view it as a PDF in a new browser tab.
 * Click *Red Hat Customer Portal* to open the Red Hat Customer Portal in a new browser tab. 
 * Click *About* to open a pop-up window showing information about the {product-title_short} version and the session of the logged-in user.
 
