--- a/doc-General_Configuration/topics/Tasks.adoc
+++ b/doc-General_Configuration/topics/Tasks.adoc
@@ -24,7 +24,7 @@ This procedure describes how to filter the virtual machine and container analysi
 
 To filter the virtual machine and container analysis task list:
 
-. Navigate to menu:Settings[Tasks].
+. From the settings menu, select *Tasks*.
 . Click *My VM and Container Analysis Tasks*.
 . From the *Zone* list, select a specific zone, or select *<All Zones>*.
 . From the *24 Hour Time Period* list, select the period of time to view the tasks.
@@ -37,7 +37,7 @@ To filter the virtual machine and container analysis task list:
 
 To delete a task from the list of virtual machine and container analysis tasks:
 
-. Navigate to menu:Settings[Tasks].
+. From the settings menu, select *Tasks*.
 . Click *My VM and Container Analysis Tasks*.
 . Select the tasks to delete. From the *Delete* menu:
 .. Click *Delete* to delete the selected tasks.
@@ -57,7 +57,7 @@ This procedure describes how to filter the user interface analysis task list. Yo
 
 To filter the other user interface task list:
 
-. Navigate to menu:Settings[Tasks].
+. From the settings menu, select *Tasks*.
 . Click *My Other UI Tasks*.
 . From the *24 Hour Time Period* list, select the period of time to view the tasks.
 . For *Task Status*, select the check boxes next to the status to view.
@@ -69,7 +69,7 @@ To filter the other user interface task list:
 
 To delete a task from the list of other user interface tasks:
 
-. Navigate to menu:Settings[Tasks].
+. From the settings menu, select *Tasks*.
 . Click *My Other UI Tasks*.
 . Select the tasks to delete. From the *Delete* menu:
 .. Click *Delete* to delete the selected tasks.
@@ -98,7 +98,7 @@ This procedure describes how to filter virtual machine analysis task lists. You 
 
 To filter the virtual machine and container analysis task list:
 
-. Navigate to menu:Settings[Tasks].
+. From the settings menu, select *Tasks*.
 . Click *All VM and Container Analysis Tasks*.
 . From the *Zone* list, select a specific zone, or select *<All Zones>*.
 . From the *24 Hour Time Period* list, select the period of time to view the tasks.
@@ -111,7 +111,7 @@ To filter the virtual machine and container analysis task list:
 
 To delete a task from the list of all virtual machine and container analysis tasks:
 
-. Navigate to menu:Settings[Tasks].
+. From the settings menu, select *Tasks*.
 . Click *All VM and Container Analysis Tasks*.
 . Select the tasks to delete. From the *Delete* menu:
 .. Click *Delete* to delete the selected tasks.
@@ -131,7 +131,7 @@ This procedure describes how to filter the list of all other tasks. You can filt
 
 To filter the all other tasks list:
 
-. Navigate to menu:Settings[Tasks].
+. From the settings menu, select *Tasks*.
 . Click *All Other Tasks*.
 . From the *24 Hour Time Period* list, select the period of time to view the tasks.
 . For *Task Status*, select the check boxes next to the status to view.
@@ -143,7 +143,7 @@ To filter the all other tasks list:
 
 To delete a task from the list of all other tasks:
 
-. Navigate to menu:Settings[Tasks].
+. From the settings menu, select *Tasks*.
 . Click *All Other Tasks*.
 . Select the tasks to delete. From the *Delete* menu:
 .. Click *Delete* to delete the selected tasks.
