updated settings menu references in common files and Assigning a Custom Analysis profile files

--- a/common/cap-util-assign-server-roles.adoc
+++ b/common/cap-util-assign-server-roles.adoc
@@ -1,4 +1,4 @@
-. Navigate to menu:Settings[Configuration], and select the server to configure from menu:Settings[Zone] in the left pane of the appliance.
+. From the settings menu, select *Configuration*, then select the server to configure from menu:Settings[Zone] in the left pane of the appliance.
 . Navigate to the *Server Roles* list in the menu:Server[Server Control] section. From there, set the appropriate Capacity and Utilization roles to *ON*. Namely:
 .. *Capacity & Utilization Coordinator*
 .. *Capacity & Utilization Data Collector*
