--- a/common/configuration-update-appliance.adoc
+++ b/common/configuration-update-appliance.adoc
@@ -3,7 +3,7 @@ Package updates to the appliance contain patches for any software bugs, includin
 
 The *Red Hat Updates* tab enables you to check for updates and update registered appliances. Any services requiring a restart to apply updates are automatically restarted as part of the *Red Hat Updates* process.
 
-. Navigate to menu:Settings[Configuration].
+. From the settings menu, select *Configuration*.
 . Select *Region* in the accordion menu and click the *Red Hat Updates* tab.
 . Click *Check For Updates* to search the Content Delivery Network (CDN) for any updated CloudForms packages. If an appliance update is available, it will be listed with the available version.
 . Click *Apply CFME Update* to install and update {product-title} packages. The {product-title} service will be automatically restarted as needed.
