--- a/art-Assigning_Custom_Analysis_Profile_to_VM/topics/To_create_VM_analysis_profile.adoc
+++ b/art-Assigning_Custom_Analysis_Profile_to_VM/topics/To_create_VM_analysis_profile.adoc
@@ -3,7 +3,7 @@
 == Creating a Virtual Machine Analysis Profile
 
 . Log into the appliance as the *admin* user.
-. Navigate to menu:Settings[Configuration].
+. From the settings menu, select *Configuration*.
 . Expand the *Settings* accordion, then click *Analysis Profiles*.
 . Click image:../images/1847.png[image] (*Configuration*), then image:../images/1862.png[image] (*Add VM Analysis Profile*).
 . In *Basic Information*, enter *Name* and *Description* for the analysis profile.
