--- a/common/smartstate.adoc
+++ b/common/smartstate.adoc
@@ -5,7 +5,8 @@ After enabling the required server roles, enable SmartState analysis. See  https
 
 Enabling SmartState analysis is similar to xref:cf-caputils[], in that the procedure also involves enabling server roles on a specific server. To do so:
 
-. Navigate to menu:Settings[Configuration], and select the server to configure from menu:Settings[Zone] in the left pane of the appliance.
+. From the settings menu, select *Configuration*.
+. Select the server to configure from menu:Settings[Zone] in the left pane of the appliance.
 . Navigate to the *Server Roles* list in the menu:Server[Server Control] section. From there, set the appropriate SmartState roles to *ON*. Namely:
 .. *SmartProxy*
 .. *SmartState Analysis*
