updated settings menu references across more books

--- a/doc-Appliance_Hardening_Guide/topics/Updates.adoc
+++ b/doc-Appliance_Hardening_Guide/topics/Updates.adoc
@@ -40,7 +40,7 @@ You need the following to register your appliance:
 To register your appliance with Red Hat Subscription Management or Red Hat Satellite 6:
 
 . Log in to the appliance as the `admin` user.
-. Navigate to menu:Settings[Configuration].
+. From the settings menu, select *Configuration*.
 . Select *Region* in the accordion menu and click the *Red Hat Updates* tab.
 . Click *Edit Registration*.
 . You can register the CloudForms Management Engine appliance using one of two available options:
@@ -64,7 +64,7 @@ To register your appliance with Red Hat Subscription Management or Red Hat Satel
 
 The *Red Hat Updates* page enables you to check for updates and update registered appliances.
 
-. Navigate to menu:Settings[Configuration].
+. From the settings menu, select *Configuration*.
 . Select *Region* in the accordion menu and click the *Red Hat Updates* tab.
 . After registering, the following options are available in the *Appliance Updates* section of the *Red Hat Updates* tab:
 
