--- a/doc-Deployment_Planning_Guide/topics/capacity.adoc
+++ b/doc-Deployment_Planning_Guide/topics/capacity.adoc
@@ -516,7 +516,7 @@ report which can be downloaded for further analysis.
 ** xref:assigning_the_capacity_and_utilization_server_roles[]
 ** xref:data_collected[]
 * Additionally, configure your {product-title} for collecting capacity and utilization reports for clusters and datastores by following this procedure:
-.. Navigate to menu:Settings[Configuration]. 
+.. From the settings menu, select *Configuration*.
 .. Select *Region* from the *Settings* tab in the left pane of the appliance. 
 .. In the right pane, under the *C & U Collection* tab, check the boxes for *Collect for All Clusters* under *Clusters* and *Collect for All Datastores* under *Datastores*, or check the boxes for the clusters/datastores you desire.
 +
