--- a/doc-Managing_Infrastructure_and_Inventory/topics/Changing_Views.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Changing_Views.adoc
@@ -1,7 +1,7 @@
 [[_changing_views]]
 = Changing Views for Virtual Machines and Templates
 
-While you can set the default view for different pages in menu:Settings[My Settings > Default Views], the current view can also be controlled from the Virtual Machines pages.
+While you can set the default view for different pages from the settings menu, then menu:Configuration[My Settings > Default Views], the current view can also be controlled from the Virtual Machines pages.
 
 . Navigate to menu:Compute[Infrastructure > Virtual Machines].
 . Click the accordion for the items to view.
