--- a/doc-Managing_Providers/topics/Adding_a_Red_Hat_Enterprise_Virtualization_Manager_Provider.adoc
+++ b/doc-Managing_Providers/topics/Adding_a_Red_Hat_Enterprise_Virtualization_Manager_Provider.adoc
@@ -25,7 +25,7 @@ The *Host Name* must use a unique fully qualified domain name.
 +
 [IMPORTANT]
 ====
-To collect capacity and utilization data, you must enable the capacity and utilization server roles available under menu:Settings[Configuration > Server > Server Control]. For more information on capacity and utilization collection, see "Assigning the Capacity and Utilization Server Roles" in the _Deployment Planning Guide_.
+To collect capacity and utilization data, you must enable the capacity and utilization server roles available from the settings menu, menu:Configuration[Server > Server Control]. For more information on capacity and utilization collection, see "Assigning the Capacity and Utilization Server Roles" in the _Deployment Planning Guide_.
 ====
 +
 [IMPORTANT]
