--- a/doc-Managing_Providers/topics/Managing_Containers.adoc
+++ b/doc-Managing_Providers/topics/Managing_Containers.adoc
@@ -281,4 +281,4 @@ Perform a SmartState Analysis of a container image to inspect the packages inclu
 
 The container image is scanned. The process will copy over any required files for the image. After reloading the image page, all new or updated packages are listed.
 
-To monitor the status of container image SmartState Analysis tasks, navigate to menu:Settings[Tasks]. The status of each task is displayed including time started, time ended, what part of the task is currently running, and any errors encountered.
+To monitor the status of container image SmartState Analysis tasks, navigate to the settings menu, then *Tasks*. The status of each task is displayed including time started, time ended, what part of the task is currently running, and any errors encountered.
