--- a/doc-Appliance_Hardening_Guide/topics/UI_Password.adoc
+++ b/doc-Appliance_Hardening_Guide/topics/UI_Password.adoc
@@ -7,7 +7,7 @@ After installing the appliance, change the default password of the `admin` to re
 Changing the `admin` password uses the same process as changing any standard user in the appliance.
 
 . Access the appliance through your web browser and log in.
-. Navigate to menu:Settings[Configuration].
+. From the settings menu, select *Configuration*.
 . In the accordion tree on the left, click on *Access Control*, then select the *Administrator* under the *Users* section.
   This displays the details for the `admin` user.
 . On the details page, select menu:Configuration[Edit this user] from the toolbar.
