--- a/doc-Managing_Infrastructure_and_Inventory/topics/Changing_Views_for_Instances_and_Images.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Changing_Views_for_Instances_and_Images.adoc
@@ -1,6 +1,6 @@
 = Changing Views for Instances and Images
 
-While you can set the default view for different pages in menu:Configuration[My Settings > Default Views], the current view can also be controlled from the Instances pages.
+While you can set the default view for different pages from the settings menu, then menu:Configuration[My Settings > Default Views], the current view can also be controlled from the Instances pages.
 
 . Navigate to menu:Compute[Clouds > Instances].
 . Click the accordion for the items to view.
