--- a/doc-Managing_Infrastructure_and_Inventory/topics/VNC_and_SPICE_consoles.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/VNC_and_SPICE_consoles.adoc
@@ -90,7 +90,7 @@ This section only applies to using the VMware MKS or VMware VMRC browser plug-in
 
 To use a browser plug-in for accessing a virtual machine console, you must have installed VNC on the machine on which you access the {product-title} Console and installed either the VMware MKS plug-in or the VMware VMRC plug-in in your browser.
 
-. Navigate to menu:Settings[Configuration].
+. From the settings menu, select *Configuration*.
 . Click on the *Settings* accordion, then click *Zones*.
 . Click the zone where the {product-title} server is located.
 . Click on the server.
