--- a/doc-Managing_Providers/topics/Enabling_Public_AMIs.adoc
+++ b/doc-Managing_Providers/topics/Enabling_Public_AMIs.adoc
@@ -3,7 +3,7 @@
 
 By default, public AMIs from an Amazon EC2 provider are not viewable in {product-title}. To make these images viewable, you must edit the main configuration file for the appliance.
 
-. Navigate to menu:Settings[Settings > Configuration > Zone > Advanced].
+. Navigate to the settings menu, then menu:Configuration[Zone > Advanced].
 . Select the configuration file to edit from the *File* list. If not already automatically selected, select *EVM Server Main Configuration*.
 . Set the *get_public_images* parameter:
 .. Set the parameter to *get_public_images: true* to make public images viewable.
