edited settings menu in rest of guides

--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_generate_widget_content_immediately.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_generate_widget_content_immediately.adoc
@@ -7,6 +7,6 @@
 . Click *OK*.
 
 The content is generated immediately instead of waiting for the next scheduled update.
-Generation of widget content is shown under menu:Settings[Tasks].
+Generation of widget content is shown under *Tasks*, accessed from the settings menu.
 
 
