--- a/doc-Policies_and_Profiles_Guide/topics/steps_schedule-compliance-check.adoc
+++ b/doc-Policies_and_Profiles_Guide/topics/steps_schedule-compliance-check.adoc
@@ -1,4 +1,4 @@
-. Navigate to menu:Settings[Configuration].
+. From the settings menu, select *Configuration*.
 
 . Click the *Settings* accordion, and select *Schedules*.
 
