--- a/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Provisioning_Requests.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Provisioning_Requests.adoc
@@ -521,7 +521,7 @@ Request 99 in region 123 results in Request ID 123000000000099.
 
 {product-title} can provision hosts using PXE and Intelligent Platform Management Interface (IPMI) technologies. Before you provision your first host, configure the following prerequisites:
 
-* Provisioning requires the *Automation Engine* server role be enabled. Confirm your server role settings in menu:Settings[Configuration > Server > Server Control].
+* Provisioning requires the *Automation Engine* server role be enabled. Confirm your server role settings in the settings menu, then menu:Configuration[Server > Server Control].
 * Make a PXE server accessible to the {product-title} server.
 * Create a customization template for hosts. This customization template must contain host-specific additions, documented in the Customization Templates for Host Provisioning section.
 * Create system image types for the host.
