--- a/doc-Provisioning_Virtual_Machines_and_Hosts/topics/CFME_Lifecycle.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/topics/CFME_Lifecycle.adoc
@@ -10,7 +10,7 @@ This guide discusses lifecycle activities such as provisioning and retirement th
 
 [IMPORTANT]
 ====
-Provisioning requires the *Automation Engine* server role enabled. Check your server role settings in menu:Settings[Configuration > Server > Server Control].
+Provisioning requires the *Automation Engine* server role enabled. Check your server role settings in the settings menu, menu:Configuration[Server > Server Control].
 ====
 
 [[provisioning]]
