fixed one last instance of Settings menu

--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -104,7 +104,7 @@ As new clusters, hosts, and datastores are discovered, you will need to come bac
 
 {product-title} allows you to create your own set of tags and tag categories. Use tags to create a customized, searchable index for your resources. Depending on your database type, your tags may be case sensitive. After creating these values, you can apply them to your resources. There are two kinds of tags.
 
-* *Company tags* which you will see under *My Company Tags* for a resource. Create company tags by navigating to menu:Settings[Configuration], then clicking on *Settings*, selecting *Region*, then the *My Company Tags* tab. A selection of company tags is provided to you by default as samples. These can be deleted if you do not need them, but are not recreated by {product-title}.
+* *Company tags* which you will see under *My Company Tags* for a resource. Create company tags from the settings menu. Navigate to *Configuration*, then click the *Settings* accordion, then menu:Region[My Company Tags]. A selection of company tags is provided to you by default as samples. These can be deleted if you do not need them, but are not recreated by {product-title}.
 
 * *System tags* are assigned automatically by {product-title}.
 
