WIP: commiting some edits

--- a/common/appe-appliance-console-cli.adoc
+++ b/common/appe-appliance-console-cli.adoc
@@ -4,8 +4,44 @@
 [[appe_appliance_console]]
 == appliance_console_cli 
 
-After starting the {product-title} appliance, log in with a user name of _root_ and the default password of _smartvm_. This displays the Bash prompt for the root user.
-Enter the appliance_console_cli command. 
+Currently, the _appliance_console_cli_ feature is a subset of the full functionality of the _appliance_console_ itself, that covers functions most likely to be scripted using the command-line interface (CLI). After starting the {product-title} appliance, log in with a user name of _root_ and the default password of _smartvm_. This displays the Bash prompt for the root user. Then, you can enter the _appliance_console_cli_ or _appliance_console_cli --help_ command to see a list of options available with the command, or simply enter appliance_console_cli [options] directly to use a specific option.
+
+.appliance_console_cli options
+[cols="1,1", frame="all"]
+|===
+|
+
+							Database Configuration
+
+
+|
+
+&#160;
+
+|
+
+							--region (-r)
+
+
+|
+
+							create a new region in the database (requires database credentials passed)
+
+
+
+|
+
+							$
+
+
+|
+
+							end of string
+
+
+
+|
+|===
 
 :numbered:
 
