--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_schedule_a_Report.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_schedule_a_Report.adoc
@@ -11,7 +11,7 @@ There are two ways to schedule a report:
 
 Add a new Schedule through the *Reports* accordion:
 
-. Navigate to menu:Cloud Intel[Reports]
+. Navigate to menu:Cloud Intel[Reports].
 . Select a report from the *Reports* accordion and click  image:1847.png[] *Configuration*.
 . Click image:1862.png[] *Add a New Schedule*. or click the Schedules accordion and click  image:1847.png[] *Configuration*,  image:1862.png[] *Add a New Schedule*.
 
