--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_schedule_a_Report.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_schedule_a_Report.adoc
@@ -28,7 +28,7 @@ Adding new Schedule details.
 
 
 . In the *Basic Information* area, type in a *Name* and *Description* for the schedule.
-* By default. *Active* is checked to enable the scan.
+* By default, *Active* is checked to enable the scan.
 
 . The *Report Selection* area is pre-populated if you added the schedule directly from the report.
   If you are adding from the schedule according, use the *Filter* drop downs to select the report that you want to schedule.
