Revisions based on peer review comments.

--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_schedule_a_Report.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_schedule_a_Report.adoc
@@ -13,13 +13,13 @@ Add a new Schedule through the *Reports* accordion:
 
 . Navigate to menu:Cloud Intel[Reports].
 . Select a report from the *Reports* accordion and click  image:1847.png[] *Configuration*.
-. Click image:1862.png[] *Add a New Schedule*. or click the Schedules accordion and click  image:1847.png[] *Configuration*,  image:1862.png[] *Add a New Schedule*.
+. Click image:1862.png[] *Add a New Schedule* or click the Schedules accordion and click  image:1847.png[] *Configuration* >  image:1862.png[] *Add a New Schedule*.
 
 or
 
 Add a new Schedule through the *Schedules* accordion:
 
-. Navigate to menu:Cloud Intel[Reports]
+. Navigate to menu:Cloud Intel[Reports].
 . Click the *Schedules* accordion. 
 . Click image:1847.png[] *Configuration*.
 . Click  image:1862.png[] *Add a New Schedule*.
@@ -58,9 +58,9 @@ Adding new Schedule details.
 * Check *Send if Report is Empty* if you want an email even if no records exist in the report.
 * Next to Attachments, check if you would like the report attached as a *Text*, *CSV*, or *PDF* file.
 
-. Click *Add*
+. Click *Add*.
 
-NOTE: See the [General Configuration](https://access.redhat.com/documentation/en/red-hat-cloudforms/4.2-beta/paged/general-configuration/) guide, to learn how to verify the address and validate outgoing email settings.
+NOTE: See https://access.redhat.com/documentation/en/red-hat-cloudforms/4.2-beta/paged/general-configuration in the _General Configuration_ guide, to learn how to verify the address and validate outgoing email settings.
 
 
 
