--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_manage_report_menu_folders.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_manage_report_menu_folders.adoc
@@ -8,7 +8,7 @@
 . Click on the accordion name you want to organize or add folders to.
 +
 * Click  image:moveToTop.png[] *(Move selected folder to top)* to move the folder to the top of the list.
-* Click  image:moveUP.png[] *(Move selected folder up)* to move the folder up.
+* Click  image:moveUp.png[] *(Move selected folder up)* to move the folder up.
 * Click  image:moveDown.png[] *(Move selected folder down)* to move the folder down.
 * Click  image:moveToBottom.png[] *(Move selected folder to bottom)* to move the folder to the bottom of the list.
 * Click  image:delete.png[] *(Delete selected folder and its contents)* to delete an folder.
